# grade_calculator

./: LICENSE  README.md  build.sh  course.py  pypi-install.sh  pypi-upload.sh  pyproject.toml  requirements.txt  test-upload.sh  test.sh  testpypi-install.sh  update-requirements.sh
.github/workflows/: python.yml  starter-workflow.yml
src/: catagory.py  category.py  course.py  main.py  semester.py  statics.py  undergrad.py
src/grade-calculator/: semester.py  statics.py  undergrad.py
src/grade_calculator/: course.py
src/src/: category.py  course.py  main.py  statics.py  undergrad.py
tests/: pylint_working.py  test_course.py  test_pytest.py
