# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grade-calculator"
version = "0.0.0"
description = "Grade calculator using 4.0 American grading scale"
readme = "README.md"
authors = [{ name = "Hyrum Dickinson", email = "hyrumsd2@illinois.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["grade", "calculator", "gpa", "school", "college", "university", "grading"]
dependencies = [
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["flake8", "pylint", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/HyrumDickinson/grade-calculator/"

# [project.scripts]
# new-undergrad = "grade-calculator.src.main:main"

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "'MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/__init__.py" = [
    "{version}"
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

