# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grade-calculator"
version = "0.0.0"
authors = [
    { name = "Hyrum Dickinson", email = "hyrumsd2@illinois.edu" }
]
description = "Grade calculator using 4.0 American grading scale"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "grade",
    "calculator",
    "gpa",
    "school",
    "college",
    "university",
    "grading"
]
#dependencies = [
#]


[project.optional-dependencies]
dev = ["flake8", "pylint", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/HyrumDickinson/grade-calculator/"

# [project.scripts]
# new-undergrad = "grade-calculator.grade-calculator.main:main"

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "'MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

